--- a/style.css
+++ b/style.css
@@ -140,11 +140,11 @@ body{
 .content-bdh .content-bdh-h3{
     width: 50%;
     font-size: 2rem;
-    color: #53FBD5;
+    color: white;
 }
 .next-homea{
     position: absolute;
-    z-index: 20;
+    z-index: 30;
     bottom: 0;
     left: 50%;
     font-size: 5rem;
@@ -254,7 +254,7 @@ body{
     font-family: "Archivo Black", sans-serif;
     font-weight: 700;
     font:bold;
-    background: linear-gradient(to right,rgba(30, 29, 29, 0.317), rgba(128, 128, 128, 0.442) , rgba(128, 128, 128, 0.677), rgb(12, 12, 12));
+    background: linear-gradient(130deg,rgba(30, 29, 29, 0.317), rgba(128, 128, 128, 0.442) , rgba(128, 128, 128, 0.677), rgb(12, 12, 12));
     display: inline;
     font-size: 6rem;
     position: absolute;
@@ -264,11 +264,17 @@ body{
     -webkit-background-clip: text;
     border: none;
     color: transparent;
+    animation: textlight 2s ease-in-out infinite alternate;
 }
-#footer{
-    width: 100%;
-    height: 200px;
+@keyframes textlight{
+   0%{
+    opacity: 1;
+   }
+   100%{
+    opacity: 0.5;
+   }
 }
+
 
 
 /* -------------colorscroll-------- */
@@ -288,3 +294,54 @@ body{
   ::-webkit-scrollbar-thumb:hover {
     background-color: #BDFF89; /* Màu của thanh cuộn khi hover */
   }
+
+  /* -------------------footer------------ */
+
+  #footer{
+    width: 100%;
+    height: 200px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.linkapp{
+    color: #dfddc5;
+    height: 200px;
+    padding: 30px 14rem;
+    width: 50%;
+}
+.linkicon, .gmail , .phone{
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: rgb(128, 128, 128);
+    /* color: #0e3746; */
+    margin-bottom: 20px;
+}
+.text_linkapp, .text_gmail, .text_phone{
+    display: inline; 
+    padding: 0 0 0 20px;
+
+}
+.linkicon i {
+    color: #0d5d8f;
+    font-size: 2rem;
+    background-color: white;
+    display: inline;
+    padding: 0;
+    border-radius: 100%;
+}
+.gmail i{
+    color: brown;
+    font-size: 2rem;
+}
+.phone i{
+    color: #75FF9C;
+    font-size: 2rem;
+}
+.linkmap{
+    padding: 30px 14rem;
+    width: 50%;
+}
